fix button overlapping in IE11/Edge

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -1,4 +1,3 @@
-
 /* the popup window */
 .cc-window, .cc-revoke {
   position: fixed;
@@ -72,10 +71,6 @@
   border-style: solid;
   text-align: center;
   white-space: nowrap;
-}
-
-.cc-banner .cc-btn:last-child {
-  min-width: 140px;
 }
 
 .cc-highlight .cc-btn:first-child {
